productbuilder interface changed
